templates/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - image: registry.redhat.io/rhscl/httpd-24-rhel7:latest
        name: apache
        ports:
        - containerPort: 8443
