templates/apache-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apache
spec:
  to:
    kind: Service
    name: apache
  tls:
    termination: passthrough
